--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "faq-accordion-main",
-  "private": true,
+  "homepage": "https://kurtbrio.github.io/fem-faq-accordion-main",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.3.1",
