--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "faq-accordion-main",
-  "homepage": "https://kurtbrio.github.io/fem-faq-accordion-main",
+  "homepage": "https://kurtbrio.github.io/fem-faq-accordion",
   "private": false,
   "version": "0.0.0",
   "type": "module",
